fix: update discord link in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -33,7 +33,7 @@
     },
     {
       "source": "/chat/",
-      "destination": "https://discord.gg/grF4GTXXYm"
+      "destination": "https://discord.gg/U5BQ9mzh"
     },
     {
       "source": "/company/",
