feat: upgrade to astro v4

--- a/vercel.json
+++ b/vercel.json
@@ -33,7 +33,7 @@
     },
     {
       "source": "/chat/",
-      "destination": "https://discord.gg/4H3xycRZ"
+      "destination": "https://discord.gg/5jZ6zEap"
     }
   ]
 }
